@@ -243,7 +243,7 @@ class Smarty extends Smarty_Internal_Data {
         if (is_callable('mb_internal_encoding')) {
             mb_internal_encoding(SMARTY_RESOURCE_CHAR_SET);
         } 
-        $this->start_time = $this->_get_time(); 
+        $this->start_time = microtime(true); 
         // set exception handler
         if (!empty($this->exception_handler))
             set_exception_handler($this->exception_handler); 
